--- a/less/config.less
+++ b/less/config.less
@@ -53,10 +53,10 @@ input {
 }
 
 //colors
-@title-color: #693d25;
+@title-color: black;
 @font-soft-color: #8e8d8d;
 @core-main-color: #456;
-@boon-color: #693d25;
+@boon-color: black;
 @icon-color: rgb(112, 90, 16);
 @clear-background: #fffdfc;
 @edit-background: #f5fdfb;
