--- a/less/npc-sheet.less
+++ b/less/npc-sheet.less
@@ -3,7 +3,7 @@
         width: 2em;
     }
     .input-long{
-        width: 12em;
+        width: 10em;
     }
     .window-content {
         background: @npcsheet-background;
@@ -93,7 +93,6 @@
                         .skill-block{
                             display: flex;
                             flex-direction: row;
-                            width: 25%;
                             padding: 0.5em 0.5em;
                             .skill-label{
                                 font-weight: bold;
@@ -103,6 +102,12 @@
                                 flex-direction: row;
                                 padding: 0 .2em 0 .2em;
 
+                            }
+                            .skill-nonedit{
+                                width: 25%;
+                            }
+                            .skill-edit{
+                                width: 50%;
                             }
                         }
                     }
