--- a/templates/actor/npc.html
+++ b/templates/actor/npc.html
@@ -95,7 +95,7 @@
                         </div>
                         <div class="skill-line item-list">
                             {{#each skills as |skill type|}}
-                                <div class="skill-block item" data-item-id="{{_id}}">                                    
+                                <div class="skill-block item {{#if ../unlocked}}skill-edit {{else}}skill-nonedit{{/if}}" data-item-id="{{_id}}">                                    
                                     <input class="inline-edit skill-name input-long" data-field="name" type="text" value="{{skill.name}}" data-dtype="Text" />
                                     <input class="inline-edit skill-value input-short" data-field="data.base" type="number" name="skill.data.base" value="{{skill.data.base}}" data-dtype="Number" />
                                     {{#if ../eliteRulesetModif}}
