--- a/less/config.less
+++ b/less/config.less
@@ -35,6 +35,11 @@
 @npc-skill-font-size: 1.2rem;
 @npc-skill-font-color: black;
 
+@dialog-font: "Signika";
+@dialog-font-size: 1rem;
+@dialog-intro-font-size: 1.2rem;
+@dialog-intro-font-weight: bold;
+
 h1 {
     font-family: "Signika";
     font-size: 1.2rem;
