--- a/templates/item/weapon.html
+++ b/templates/item/weapon.html
@@ -54,7 +54,7 @@
                 <td><input name="data.skillValueNpcElite" type="number" value="{{data.skillValueNpcElite}}"/></td>
                 {{/if}}
                 {{else}}
-                    <td><input name="data.skillName" type="text" value="{{data.skillName}}"/></td>
+                    <td>{{data.skillName}}</td>
             {{/if}}
             </table>
             
