--- a/less/config.less
+++ b/less/config.less
@@ -40,6 +40,14 @@
 @dialog-intro-font-size: 1.2rem;
 @dialog-intro-font-weight: bold;
 
+@chat-font: "Signika";
+@chat-font-size: 1rem;
+@chat-intro-font: "Signika";
+@chat-intro-font-size: 1.2rem;
+@chat-title-border-radius: 20px;
+@chat-modifier-font-style: italic;
+@chat-modifier-font-size: 0.9rem;
+
 h1 {
     font-family: "Signika";
     font-size: 1.2rem;
@@ -70,10 +78,10 @@ input {
 @border-color-skill: rgb(146, 142, 142);
 @border-color-combat-bonus: rgb(146, 142, 142);
 
-@chat-introtext: black;
-@chat-formulatext: white;
-@chat-finaltext: white;
-@chat-modifiertext: rgb(206, 233, 86);
+@chat-introtext: white;
+@chat-formulatext: black;
+@chat-finaltext: black;
+@chat-modifiertext: rgb(71, 14, 14);
 
 //size
 @editor-height: 5em;
@@ -83,5 +91,6 @@ input {
 @itemsheet-background: repeat url('../../../ui/parchment-white.jpg');
 @npcsheet-background: repeat url('../../../ui/parchment-white.jpg');
 @chat-background: repeat url('../../../ui/parchment-white.jpg');
-@chat-divider: top/50% repeat url('../../../ui/parchment-white.jpg');
+@chat-title-background: repeat url('../../../ui/denim.png');
+@chat-divider-background: top/50% repeat url('../../../ui/parchment-white.jpg');
 @booncard-background: url('../../../ui/parchment-white.jpg');
