--- a/less/cleenmain.less
+++ b/less/cleenmain.less
@@ -4,6 +4,7 @@
 @import "../../../systems/cleenmain/less/boon-card.less";
 @import "../../../systems/cleenmain/less/item-sheet.less";
 @import "../../../systems/cleenmain/less/boon-sheet.less";
+@import "../../../systems/cleenmain/less/skill-sheet.less";
 @import "../../../systems/cleenmain/less/weapon-sheet.less";
 @import "../../../systems/cleenmain/less/tab/player-boons.less";
 @import "../../../systems/cleenmain/less/tab/player-bio.less";
