--- a/less/player-sheet.less
+++ b/less/player-sheet.less
@@ -87,6 +87,10 @@
                 display: flex;
                 flex-direction: row;
                 margin: 0 0 1em 0;
+                .intro-block-left{
+                    align-self:center;
+                    min-width :100px;
+                }
                 .intro-block-right{
                     display: flex;
                     flex-flow: column nowrap;
