--- a/templates/actor/player.html
+++ b/templates/actor/player.html
@@ -35,7 +35,9 @@
         </div>
         <div class="central">
             <div class="intro-block">
-                <img src="{{actor.img}}" data-edit="img" title="{{actor.name}}" height="150" width="100"/>
+                <div class="intro-block-left">
+                    <img src="{{actor.img}}" data-edit="img" title="{{actor.name}}" height="129" width="100"/>
+                </div>
                 <div class="intro-block-right">
                     <div class="central-line">
                         <div class="name-text">{{localize "CLEENMAIN.label.character"}} :</div>
