--- a/less/config.less
+++ b/less/config.less
@@ -28,6 +28,10 @@
 @combat-table-font-size: 0.9rem;
 @combat-table-font-weight: lighter;
 
+@npc-name-font: "Signika";
+@npc-name-color: @title-color;
+@npc-name-font-size: 2em;
+@npc-activity-font-size: 1.1em;
 @npc-combat-line-font: "Signika";
 @npc-combat-line-font-size: 1.2rem;
 @npc-combat-line-font-color: black;
