--- a/templates/actor/npc.html
+++ b/templates/actor/npc.html
@@ -1,19 +1,32 @@
 <form class="{{cssClass}}" autocomplete="off">
     <div class="npc-main">
-        <div class="name-line">
-            <input name="name" type="text" value="{{actor.name}}" placeholder="Name"/>
-            <div class="right-icon">
-                <a class="sheet-unlock" title="{{localize "CLEENMAIN.label.unlock_sheet"}}">
-                    {{#if unlocked}}
-                        <i class="fas fa-lock-open"></i>
-                    {{else}}
-                        <i class="fas fa-lock"></i>
-                    {{/if}}
-                </a>
-            </div>
-        </div>
         <div class="npcstat-block">
             <div class="npcstat-block-left">
+                <div class="name-line">
+                    {{#if unlocked}}
+                        <input class="input-long" name="name" type="text" value="{{actor.name}}" placeholder="Name"/>
+                    {{else}}
+                    <div class="name-text">{{actor.name}}</div>
+                    {{/if}}
+                    <div class="right-icon">
+                        <a class="sheet-unlock" title="{{localize "CLEENMAIN.label.unlock_sheet"}}">
+                            {{#if unlocked}}
+                                <i class="fas fa-lock-open"></i>
+                            {{else}}
+                                <i class="fas fa-lock"></i>
+                            {{/if}}
+                        </a>
+                    </div>
+                </div>
+                <div class="activity-line">
+                    {{#if unlocked}}
+                        <input class="input-verylong" title="{{localize 'CLEENMAIN.label.activity'}}" id="activity" name="data.activity" type="text" value="{{data.activity}}"/>
+                        {{else}}
+                        {{#if (isNotEmptyString data.activity)}}
+                            <div class="activity-text">{{data.activity}}</div>
+                        {{/if}}
+                    {{/if}}
+                </div>
                 <div class="level-line">
                     <select name="data.level">
                         {{#select data.level}}
