--- a/templates/actor/npc.html
+++ b/templates/actor/npc.html
@@ -63,7 +63,7 @@
                             <a class="weapon-attack-roll">
                                 <i class="fas fa-dice"></i>
                             </a>
-                            <div class="weapon-el">( {{item.data.damage}} {{item.data.special}})</div>
+                            <div class="weapon-el">( {{item.data.damageBase}} {{item.data.special}})</div>
                             <div class="right-icon"></div>
                             {{#if ../unlocked}}
                                 <a class="item-open-sheet" data-type="weapon" title="{{localize 'CLEENMAIN.sheet.edit'}}">
