--- a/less/player-sheet.less
+++ b/less/player-sheet.less
@@ -65,6 +65,7 @@
                         border-radius: 5px;
                         width: 10%;
                         text-align: center;
+                        margin-right: 5px;
                     }
                     .skill-dev{       
                         width: 10%;
