Don't display Use heroism when no more points

--- a/templates/chat/rolldialog.html
+++ b/templates/chat/rolldialog.html
@@ -13,9 +13,11 @@
 
   {{#ifn damageRoll}}
     {{#if isPlayer}}
-      <div class="rollmodifier">
-        <label>{{localize "CLEENMAIN.dialog.heroism"}}</label><input type="checkbox" id="heroism" />
-      </div>
+      {{#if hasHeroism}}
+        <div class="rollmodifier">
+          <label>{{localize "CLEENMAIN.dialog.heroism"}}</label><input type="checkbox" id="heroism" />
+        </div>
+      {{/if}}
     {{/if}}
   {{/ifn}}
 
