Add total protection and behaviour modifier
- Calculate protection taking into account shield
- Boon Cautious and penalty Risk implemented

--- a/templates/actor/tab/combat.html
+++ b/templates/actor/tab/combat.html
@@ -1,7 +1,7 @@
 <div class="combat-tab">
     <!-- PROTECTIONS PART -->
     <div class="title-line">
-        <h1 class="combat-domain-label">{{localize "CLEENMAIN.label.protections"}}
+        <h1 class="combat-domain-label">{{localize "CLEENMAIN.label.protections"}}  ( {{protection}} ) {{defenceModifier}}
             {{#if unlocked}}
                 <a class="item-create right-icon" data-type="armor" title="{{localize 'CLEENMAIN.armor.add'}}"><i class="fas fa-plus"></i></a>
             {{/if}}
