--- a/templates/chat/rolldialog.html
+++ b/templates/chat/rolldialog.html
@@ -32,9 +32,9 @@
         <span class="tooltiptext">{{localize "CLEENMAIN.bonus.lethalattack.description"}}</span>
       </div>
       <div class="bonus-line tooltip">
-        <label for="mutlipleattacks">{{localize "CLEENMAIN.bonus.mutlipleattacks.label"}}</label>
-        <input type="number" id="mutlipleattacks" name="mutlipleattacks" min="0" max="1" value="0"/>
-        <span class="tooltiptext">{{localize "CLEENMAIN.bonus.mutlipleattacks.description"}}</span>
+        <label for="multipleattacks">{{localize "CLEENMAIN.bonus.multipleattacks.label"}}</label>
+        <input type="number" id="multipleattacks" name="multipleattacks" min="0" max="1" value="0"/>
+        <span class="tooltiptext">{{localize "CLEENMAIN.bonus.multipleattacks.description"}}</span>
       </div>
       <div class="bonus-line tooltip">
         <label for="efficiency">{{localize "CLEENMAIN.bonus.efficiency.label"}}</label>
